--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "jsonwebtoken": "^9.0.1",
         "jwt-decode": "^3.1.2",
         "lodash": "^4.17.21",
+        "luxon": "^3.4.3",
         "metismenujs": "^1.4.0",
         "mui-tel-input": "^4.0.0",
         "next": "^13.1.6",
@@ -76,7 +77,9 @@
     },
     "license": "",
     "devDependencies": {
-        "eslint": "^8.47.0",
+        "@typescript-eslint/eslint-plugin": "^6.7.2",
+        "@typescript-eslint/parser": "^6.7.2",
+        "eslint": "^8.49.0",
         "sass": "^1.66.1"
     }
 }
